# TradingBotPRO

./: .env.example  .gitignore  di.py  pyproject.toml  run_backtest.py  run_live.py  run_paper.py  strategy_logic.py
config/: __init__  backtest.yaml  base.yaml  live.yaml  paper.yaml  settings.py
core/: engine.py  event_bus.py  events.py  instrument_runner.py  models.py  portfolio.py  strategy.py
core/risk/: __init__  drawdown.py  manager.py  position_sizer.py
data/: base.py  historical.py  live.py
execution/: backtest.py  base.py  order_poller.py  paper.py  retry.py  tinkoff.py
tests/fixtures/: bar_factory.py
tests/integration/: test_execution_backtest.py
tests/unit/: test_fixes.py  test_risk.py  test_strategy.py
utils/: logger.py
